# hyperthymestic

./: LICENSE  README.rst  pyproject.toml
hyperthymestic/: console.py  models.py  utils.py
tests/: test_hyperthymestic.py
