[tool.poetry]
name = "hyperthymestic"
version = "0.1.0"
description = "A search utility for your Markdown knowledge base."
license = "MIT"
readme = "README.rst"
homepage = "https://joehaaga.xyz"
repository = "https://github.com/josephhaaga/hyperthymestic"
keywords = ["markdown", "knowledge base"]
authors = ["Joseph Haaga <haaga.joe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
spacy = "^2.3.2"
scikit-learn = "^0.23.2"
click = "^7.0"
appdirs = "^1.4.4"
SQLAlchemy = "^1.3.20"
en-core-web-md = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-2.3.1/en_core_web_md-2.3.1.tar.gz"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-mock = "^3.3.1"

[tool.poetry.scripts]
hyperthymestic = "hyperthymestic.console:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
